--- a/.github/workflows/Emmy-fetch-weather.yml
+++ b/.github/workflows/Emmy-fetch-weather.yml
@@ -60,7 +60,7 @@ jobs:
 
       - name: Upload Error Log
         if: failure() && github.event.inputs.log_errors == 'true'
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3  # Uppdaterad till v3
         with:
           name: error_log
           path: error_log.txt
@@ -68,7 +68,7 @@ jobs:
   build_and_push_docker:
     name: Build and Push Docker Image
     runs-on: ubuntu-latest
-    needs: fetch_and_extract_temperature  # körs bara om 'fetch_and_extract_temperature' lyckades
+    needs: fetch_and_extract_temperature
 
     steps:
       - name: Check out code
@@ -92,4 +92,3 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: ${{ env.DOCKER_IMAGE_NAME }}:latest
-
