--- a/.github/workflows/Lina.Build_Depoly.yml
+++ b/.github/workflows/Lina.Build_Depoly.yml
@@ -16,8 +16,8 @@ jobs:
       - name: Log in to DockerHub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.LINA_DOCKER_USERNAME }}
+          password: ${{ secrets.LINA_DOCKER_PASSWORD }}
 
       - name: Build Docker image
         run: |
