--- a/.github/workflows/Lina.Build_Depoly.yml
+++ b/.github/workflows/Lina.Build_Depoly.yml
@@ -21,11 +21,11 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -t ${{ secrets.LINA_DOCKER_USERNAME }}/SMHI_API_KEY:latest .
+          docker build -t ${{ secrets.LINA_DOCKER_USERNAME }}/SMHI_API_KEY_LINA:latest .
 
       - name: Push Docker image
         run: |
-          docker push ${{ secrets.LINA_DOCKER_USERNAME }}/SMHI_API_KEY:latest
+          docker push ${{ secrets.LINA_DOCKER_USERNAME }}/SMHI_API_KEY_LINA:latest
 
   deploy_to_azure:
     runs-on: ubuntu-latest
@@ -37,4 +37,4 @@ jobs:
       with:
         app-name: ${{ secrets.AZURE_NAME }}
         publish-profile: ${{ secrets.AZURE_PASSWORD }}
-        images: ${{ secrets.LINA_DOCKER_USERNAME }}/SMHI_API_KEY:latest
+        images: ${{ secrets.LINA_DOCKER_USERNAME }}/SMHI_API_KEY_LINA:latest
