--- a/.github/workflows/Emmy-fetch-weather.yml
+++ b/.github/workflows/Emmy-fetch-weather.yml
@@ -1,4 +1,4 @@
-name: Fetch Weather Data, Test, and Build Docker Image
+name: Fetch Weather Data, Test and Build Docker Image
 
 on:
   workflow_dispatch:
