--- a/.github/workflows/Emmy-fetch-weather.yml
+++ b/.github/workflows/Emmy-fetch-weather.yml
@@ -19,10 +19,10 @@ jobs:
 
     steps:
       - name: Check out code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3  # Uppdaterad till v3
 
       - name: Set up Python 3.11
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4  # Uppdaterad till v4
         with:
           python-version: '3.11'
 
@@ -72,10 +72,10 @@ jobs:
 
     steps:
       - name: Check out code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3  # Uppdaterad till v3
 
       - name: Set up Python 3.11
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4  # Uppdaterad till v4
         with:
           python-version: '3.11'
 
