--- a/DockerfileEmmy
+++ b/DockerfileEmmy
@@ -12,4 +12,4 @@ EXPOSE 80
 ENV FLASK_APP=Emmyapp.py
 ENV FLASK_ENV=development
 
-CMD ["flask", "run", "--host=0.0.0.0", "--port=80"]
+CMD ["python", "run", "--host=0.0.0.0", "--port=80"]
