--- a/.github/workflows/Lina.Test_Build_Depoly.yml
+++ b/.github/workflows/Lina.Test_Build_Depoly.yml
@@ -9,7 +9,7 @@ on:
         default: false
 env:
       SMHI_API_KEY: ${{ secrets.SMHI_API_KEY }}
-      DOCKER_IMAGE_NAME: Linayonan/Dockerfil_lina  
+      DOCKER_IMAGE_NAME: linayonan/Dockerfil_lina  
       
 jobs:
   fetch_and_extract_temperature: 
@@ -26,7 +26,9 @@ jobs:
         python-version: '3.11'
 
     - name: Install dependencies
-      run: pip install -r requirements.txt
+      run: |
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
 
     - name: Fetch data from SMHI API
       env:
@@ -37,7 +39,7 @@ jobs:
           echo "Fetched data from SMHI API."
 
     - name: Display fetched data
-      run: cat weather_data.json
+      run: cat weather_data.json  
 
     - name: Extract temperature from weather data
       run: |
@@ -49,7 +51,7 @@ jobs:
       id: test_app
       run: |
         python app.py > test-output.log 
-       ##echo $? > result.txt
+    
 
     - name: Upload error logs
       if: ${{ github.event.inputs.log_errors == 'true' && failure() }}
@@ -84,7 +86,7 @@ jobs:
 
       - name: Push Docker image
         run: |
-           docker push $DOCKER_IMAGE_NAME:latest
+           docker push ${{ env.DOCKER_IMAGE_NAME }}:latest
 
 
   deploy_to_azure:
@@ -92,9 +94,12 @@ jobs:
     needs: build_docker_image
 
     steps:
+    - name: Checkout Code
+      uses: actions/checkout@v3
+      
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
       with:
         app-name: ${{ secrets.AZURE_NAME }}
         publish-profile: ${{ secrets.AZURE_PASSWORD }}
-        images: ${{ secrets.LINA_DOCKER_USERNAME }}/SMHI_API_KEY_LINA:latest
+        images: ${{ env.DOCKER_IMAGE_NAME }}:latest
