--- a/.github/workflows/thomas-pipeline.yml
+++ b/.github/workflows/thomas-pipeline.yml
@@ -13,7 +13,7 @@ env:
   DOCKER_IMAGE_NAME: thomaslaene/weather-app
 
 jobs:
-  # Step 1: Run tests
+
   run_tests:
     name: Run Unit and Integration Tests
     runs-on: ubuntu-latest
@@ -39,11 +39,11 @@ jobs:
       - name: Run Integration Tests
         run: pytest tests/integration
 
-  # Step 2: Build and push Docker image if tests pass
-  build_and_push_docker:
+
+  build_and_push_docker_DeployGCP:
     name: Build and Push Docker Image
     runs-on: ubuntu-latest
-    needs: run_tests  # This ensures that this job only runs if `run_tests` passes
+    needs: run_tests  
 
     steps:
       - name: Check out code
@@ -80,7 +80,7 @@ jobs:
 
       - name: Tag and push to Google Container Registry
         run: |
-         docker tag ${{ secrets.THOMAS_DOCKER_USERNAME }}//weather-app:${{ github.sha }} gcr.io/${{ secrets.GCP_PROJECT_ID }}/weather-app:${{ github.sha }}
+         docker tag ${{ secrets.THOMAS_DOCKER_USERNAME }}/weather-app:${{ github.sha }} gcr.io/${{ secrets.GCP_PROJECT_ID }}/weather-app:${{ github.sha }}
          docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/weather-app:${{ github.sha }}
 
       - name: Deploy to Google Cloud Run
