--- a/.github/workflows/thomas-pipeline.yml
+++ b/.github/workflows/thomas-pipeline.yml
@@ -11,9 +11,10 @@ on:
 env:
   SMHI_API_KEY: ${{ secrets.SMHI_API_KEY }}
   DOCKER_IMAGE_NAME: thomaslaene/weather-app
+  GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
 
 jobs:
-
+  # Step 1: Run tests
   run_tests:
     name: Run Unit and Integration Tests
     runs-on: ubuntu-latest
@@ -39,11 +40,11 @@ jobs:
       - name: Run Integration Tests
         run: pytest tests/integration
 
-
-  build_and_push_docker_DeployGCP:
+  # Step 2: Build and push Docker image if tests pass
+  build_and_push_docker:
     name: Build and Push Docker Image
     runs-on: ubuntu-latest
-    needs: run_tests  
+    needs: run_tests  # This ensures that this job only runs if `run_tests` passes
 
     steps:
       - name: Check out code
@@ -68,25 +69,34 @@ jobs:
           push: true
           tags: ${{ env.DOCKER_IMAGE_NAME }}:latest
 
+
+  deploy_to_google_cloud:
+    name: Deploy to Google Cloud Run
+    runs-on: ubuntu-latest
+    needs: build_and_push_docker 
+
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v2
+
       - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v1
         with:
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          project_id: ${{ env.GCP_PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_KEY_FILE }}
-      
-      - name: Configure Docker to use gcloud as a credential helper
-        run: |
-         gcloud auth configure-docker
+
+      - name: Authenticate Docker with Google Cloud
+        run: gcloud auth configure-docker
 
       - name: Tag and push to Google Container Registry
         run: |
-         docker tag ${{ secrets.THOMAS_DOCKER_USERNAME }}/weather-app:${{ github.sha }} gcr.io/${{ secrets.GCP_PROJECT_ID }}/weather-app:${{ github.sha }}
-         docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/weather-app:${{ github.sha }}
+          docker tag ${{ env.DOCKER_IMAGE_NAME }}:latest gcr.io/${{ env.GCP_PROJECT_ID }}/weather-app:latest
+          docker push gcr.io/${{ env.GCP_PROJECT_ID }}/weather-app:latest
 
       - name: Deploy to Google Cloud Run
         run: |
-         gcloud run deploy weather-app \
-          --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/weather-app:${{ github.sha }} \
-          --region europe-west1 \
-          --platform managed \
-          --allow-unauthenticated
+          gcloud run deploy weather-app \
+            --image gcr.io/${{ env.GCP_PROJECT_ID }}/weather-app:latest \
+            --region europe-west1 \
+            --platform managed \
+            --allow-unauthenticated
