--- a/.github/workflows/thomas-pipeline.yml
+++ b/.github/workflows/thomas-pipeline.yml
@@ -73,11 +73,20 @@ jobs:
   deploy_to_google_cloud:
     name: Deploy to Google Cloud Run
     runs-on: ubuntu-latest
-    needs: build_and_push_docker 
+    needs: build_and_push_docker
 
     steps:
       - name: Check out code
         uses: actions/checkout@v2
+
+      - name: Log in to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.THOMAS_DOCKER_USERNAME }}
+          password: ${{ secrets.THOMAS_DOCKER_PASSWORD }}
+
+      - name: Pull the Docker image from Docker Hub
+        run: docker pull ${{ env.DOCKER_IMAGE_NAME }}:latest
 
       - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v1
@@ -100,3 +109,5 @@ jobs:
             --region europe-west1 \
             --platform managed \
             --allow-unauthenticated
+
+
