--- a/.github/workflows/thomas-pipeline.yml
+++ b/.github/workflows/thomas-pipeline.yml
@@ -14,7 +14,7 @@ env:
   GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
 
 jobs:
-  # Step 1: Run tests
+
   run_tests:
     name: Run Unit and Integration Tests
     runs-on: ubuntu-latest
@@ -40,11 +40,11 @@ jobs:
       - name: Run Integration Tests
         run: pytest tests/integration
 
-  # Step 2: Build and push Docker image if tests pass
+
   build_and_push_docker:
     name: Build and Push Docker Image
     runs-on: ubuntu-latest
-    needs: run_tests  # This ensures that this job only runs if `run_tests` passes
+    needs: run_tests 
 
     steps:
       - name: Check out code
