Update thomas-pipeline.yml port to 80

--- a/.github/workflows/thomas-pipeline.yml
+++ b/.github/workflows/thomas-pipeline.yml
@@ -108,5 +108,6 @@ jobs:
             --region us-central1 \
             --platform managed \
             --allow-unauthenticated
+            --set-env-vars PORT=80
 
 
