--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,14 +36,15 @@ jobs:
 
 
       - name: Integration test against SMHI API
-        run: |
-         response=$(curl -s -o /dev/null -w "%{http_code}" "$SMHI_API_KEY")
-         if [ "$response" -eq 200 ]; then
-          echo "API is reachable and returned status 200"
-         else
-          echo "Error: API is not reachable or returned status $response" >&2
-          exit 1
-         fi
+         echo "SMHI_API_KEY is:$SMHI_API_KEY"
+          response=$(curl -s -o /dev/null -w "%{http_code}" "$SMHI_API_KEY")
+          if [ "$response" -eq 200 ]; then
+            echo "API is reachable and returned status 200"
+          else
+            echo "Error:API is not reachable or returned status $response"
+            curl -v "$SMHI_API_KEY" 
+            exit 1
+          fi
 
 
       - name: Fetch Weather Data
